--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next",
+  "rules": {
+    "react/no-unescaped-entities": "true",
+    "@next/next/no-page-custom-font": "off",
+    
+    "@next/next/no-img-element":"off"
+  }
 }
